# redscript

./: .gitignore  Cargo.toml  Dockerfile  Mayhemfile  README.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: assembler.rs  diagnostics.rs  error.rs  lib.rs  parser.rs  scope.rs  sealed_structs.rs  source_map.rs  sugar.rs  symbol.rs  typechecker.rs  unit.rs
compiler/src/diagnostics/: invalid_temp_use.rs
compiler/tests/: bytecode.rs  compile.rs  utils.rs
core/: Cargo.toml
core/src/: ast.rs  bundle.rs  bytecode.rs  definition.rs  mapper.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/api/: Cargo.toml
crates/compiler/api/src/: lib.rs
crates/compiler/backend/: Cargo.toml
crates/compiler/backend/src/: assemble.rs  inputs.rs  known_types.rs  lib.rs  monomorph.rs  type_flags.rs
crates/compiler/backend/src/assemble/: closure.rs
crates/compiler/backend/tests/: bytecode.rs
crates/compiler/backend/tests/data/: array-coerce.reds  array-literal.reds  break.reds  cast.reds  continue.reds  derive-new.reds  dyn-cast.reds  enum-equals.reds  enum.reds  excluded.reds  for-loop.reds  generic-struct.reds  if-else.reds  implicit-convert.reds  lambda.reds  local-init.reds  mixed-ref.reds  name-of.reds  named-impl.reds  nested-for-loop.reds  number-literal.reds  patmat.reds  result-type.reds  return-void.reds  static-arrays.reds  static-receiver.reds  string-interp.reds  string-literal.reds  struct.reds  super.reds  switch.reds  ternary.reds  variant.reds
crates/compiler/backend/tests/snapshots/: bytecode__bytecode@array-coerce.reds.snap  bytecode__bytecode@array-literal.reds.snap  bytecode__bytecode@break.reds.snap  bytecode__bytecode@cast.reds.snap  bytecode__bytecode@continue.reds.snap  bytecode__bytecode@derive-new.reds.snap  bytecode__bytecode@dyn-cast.reds.snap  bytecode__bytecode@enum-equals.reds.snap  bytecode__bytecode@enum.reds.snap  bytecode__bytecode@excluded.reds.snap  bytecode__bytecode@for-loop.reds.snap  bytecode__bytecode@generic-struct.reds.snap  bytecode__bytecode@if-else.reds.snap  bytecode__bytecode@implicit-convert.reds.snap  bytecode__bytecode@lambda.reds.snap  bytecode__bytecode@local-init.reds.snap  bytecode__bytecode@mixed-ref.reds.snap  bytecode__bytecode@name-of.reds.snap  bytecode__bytecode@named-impl.reds.snap  bytecode__bytecode@nested-for-loop.reds.snap  bytecode__bytecode@number-literal.reds.snap  bytecode__bytecode@patmat.reds.snap  bytecode__bytecode@result-type.reds.snap  bytecode__bytecode@result-type.reds.snap.new  bytecode__bytecode@return-void.reds.snap  bytecode__bytecode@static-arrays.reds.snap  bytecode__bytecode@static-receiver.reds.snap  bytecode__bytecode@string-interp.reds.snap  bytecode__bytecode@string-literal.reds.snap  bytecode__bytecode@struct.reds.snap  bytecode__bytecode@super.reds.snap  bytecode__bytecode@switch.reds.snap  bytecode__bytecode@ternary.reds.snap  bytecode__bytecode@variant.reds.snap
crates/compiler/frontend/: Cargo.toml
crates/compiler/frontend/src/: cte.rs  diagnostic.rs  ir.rs  lib.rs  lower.rs  modules.rs  stages.rs  symbols.rs  types.rs  utils.rs  visitor.rs
crates/compiler/frontend/src/diagnostic/: pass.rs
crates/compiler/frontend/src/lower/: env.rs  error.rs  simplify.rs  types.rs
crates/compiler/frontend/src/stages/: infer.rs  resolution.rs
crates/compiler/frontend/src/utils/: fmt.rs  lazy.rs  scoped_map.rs
crates/compiler/frontend/tests/: errors.rs
crates/compiler/frontend/tests/data/: annotation-checks.reds  class-checks.reds  comparator.reds  dyn-cast-checks.reds  enum-checks.reds  expr-checks.reds  function-checks.reds  implicit-visibility.reds  inference.reds  interpolation-error.reds  invariance-checks.reds  item-checks.reds  mixed-ref.reds  pattern-checks.reds  private-constructor.reds  struct-subtyping.reds  tvar-extends.reds  type-mismatch.reds  visibility.reds
crates/compiler/frontend/tests/snapshots/: errors__compilation_errors.snap  errors__compilation_errors@annotation-checks.reds.snap  errors__compilation_errors@class-checks.reds.snap  errors__compilation_errors@comparator.reds.snap  errors__compilation_errors@dyn-cast-checks.reds.snap  errors__compilation_errors@enum-checks.reds.snap  errors__compilation_errors@expr-checks.reds.snap  errors__compilation_errors@function-checks.reds.snap  errors__compilation_errors@implicit-visibility.reds.snap  errors__compilation_errors@inference.reds.snap  errors__compilation_errors@inference.reds.snap.new  errors__compilation_errors@interpolation-error.reds.snap  errors__compilation_errors@invariance-checks.reds.snap  errors__compilation_errors@item-checks.reds.snap  errors__compilation_errors@mixed-ref.reds.snap  errors__compilation_errors@pattern-checks.reds.snap  errors__compilation_errors@private-constructor.reds.snap  errors__compilation_errors@struct-subtyping.reds.snap  errors__compilation_errors@tvar-extends.reds.snap  errors__compilation_errors@type-mismatch.reds.snap  errors__compilation_errors@visibility.reds.snap
crates/decompiler/: Cargo.toml
crates/decompiler/src/: control_flow.rs  decompiler.rs  error.rs  lib.rs  location.rs
crates/dotfile/: Cargo.toml
crates/dotfile/src/: lib.rs
crates/io/: Cargo.toml
crates/io/examples/: cli.rs
crates/io/src/: bundle.rs  definition.rs  index.rs  instr.rs  lib.rs  util.rs
crates/io/tests/: tests.rs
crates/scc/cli/: Cargo.toml  build.rs
crates/scc/cli/src/: arguments.rs  capi.rs  main.rs  raw.rs
crates/scc/core/: Cargo.toml
crates/scc/core/src/: hints.rs  lib.rs  lock.rs  migration.rs  output.rs  settings.rs
crates/scc/shared/: Cargo.toml
crates/scc/shared/src/: hints.rs  lib.rs  lock.rs  logger.rs  output.rs  report.rs  settings.rs
crates/syntax/ast/: Cargo.toml
crates/syntax/ast/src/: ast.rs  files.rs  lib.rs  span.rs  visitor.rs
crates/syntax/formatter-cli/: Cargo.toml
crates/syntax/formatter-cli/src/: main.rs
crates/syntax/parser/: Cargo.toml
crates/syntax/parser/src/: lexer.rs  lib.rs  parser.rs
crates/syntax/parser/src/parser/: expr.rs  item.rs  stmt.rs
(+74 files in other folders)
