[workspace]
resolver = "2"
members = [
    "crates/syntax/ast",
    "crates/syntax/parser",
    "crates/syntax/formatter",
    "crates/io",
    "crates/compiler/frontend",
    "crates/compiler/backend",
    "crates/compiler/api",
    "crates/decompiler",
    "crates/cli",
    "crates/scc/shared",
    "crates/scc/capi",
    "crates/scc/cli",
    "crates/dotfile",
]

[workspace.package]
version = "1.0.0-preview.9"
authors = ["jekky"]
edition = "2024"

[workspace.dependencies]
redscript-ast.path = "crates/syntax/ast"
redscript-parser.path = "crates/syntax/parser"
redscript-formatter.path = "crates/syntax/formatter"
redscript-io.path = "crates/io"
redscript-compiler-frontend.path = "crates/compiler/frontend"
redscript-compiler-backend.path = "crates/compiler/backend"
redscript-compiler-api.path = "crates/compiler/api"
redscript-decompiler.path = "crates/decompiler"
scc-shared.path = "crates/scc/shared"
redscript-dotfile.path = "crates/dotfile"

log = "0.4"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
derive-where = "1"
bitflags = "2"
bitfield-struct = "0.10"
identity-hash = "0.1"
foldhash = "0.1"
slab = "0.4"
smallvec = { version = "1", features = ["union", "const_generics"] }
hashbrown = "0.15"
indexmap = "2"
elsa = { version = "1", features = ["indexmap"] }
serde = "1"
toml = { version = "0.8", default-features = false }
fern = "0.7"
flexi_logger = { version = "0.30", default-features = false }
argh = "0.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
crc32fast = "1"
ignore = "0.4"
vmap = "0.6"
file-id = "0.2"
fd-lock = "4"
msgbox = "0.7"
pretty_dtoa = "0.3"
minidl = "0.1"
bindgen = "0.71"
mimalloc = "0.1"

similar-asserts = "1"
insta = { version = "1", features = ["glob"] }

[workspace.dependencies.byte]
git = "https://github.com/jac3km4/byte"
rev = "da71833"
features = ["alloc", "derive"]

[workspace.dependencies.sequence_trie]
git = "https://github.com/jac3km4/rust_sequence_trie"
rev = "20c28c4"
features = ["hashbrown"]

[patch.crates-io]
stable_deref_trait = { git = "https://github.com/Storyyeller/stable_deref_trait", rev = "59a35e0" }

[workspace.lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[workspace.lints.clippy]
all = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-prefix = ""
shared-version = true
publish = false
