[package]
name = "redscript-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
redscript-decompiler = { path = "../decompiler" }
redscript-compiler = { path = "../compiler" }
log.workspace = true
anyhow.workspace = true
flexi_logger = { workspace = true, features = ["colors"] }
vmap.workspace = true
argh.workspace = true

[lints]
workspace = true
