[package]
name = "redscript-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
log.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
itertools.workspace = true
strum.workspace = true
flexstr.workspace = true
enum-as-inner.workspace = true
peg = "0.8"
hamt-sync = { git = "https://github.com/jac3km4/hamt-sync", rev = "v0.2.6" }
sequence_trie = { git = "https://github.com/jac3km4/rust_sequence_trie", rev = "a056b4c", features = [
    "hashbrown",
] }
walkdir = "2"

[lints]
workspace = true
