[package]
name = "redscript-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
log.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
itertools.workspace = true
strum.workspace = true
flexstr.workspace = true
enum-as-inner.workspace = true
peg.workspace = true
hamt-sync.workspace = true
sequence_trie = { workspace = true, features = [ "hashbrown" ] }
walkdir.workspace = true

[lints]
workspace = true
