[package]
name = "redscript"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
itertools.workspace = true
strum.workspace = true
enum-as-inner.workspace = true
byteorder.workspace = true
flexstr.workspace = true
modular-bitfield.workspace = true
crc32fast.workspace = true

[dev-dependencies]
rusty-hook.workspace = true

[features]
default = ["parse-code"]
arc = []
parse-code = []

[lints]
workspace = true
