[package]
name = "redscript-decompiler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript-io.workspace = true
redscript-ast.workspace = true
redscript-formatter.workspace = true

thiserror.workspace = true
hashbrown.workspace = true

[lints]
workspace = true
