[package]
name = "redscript-dotfile"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "serde"] }
hashbrown = { workspace = true, features = ["serde"] }
leon.workspace = true

[lints]
workspace = true
