[package]
name = "redscript-compiler-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript-ast.workspace = true
redscript-parser.workspace = true
redscript-io = { workspace = true, features = ["mmap"] }
redscript-compiler-frontend.workspace = true
redscript-compiler-backend.workspace = true

log.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[features]
ignore = ["redscript-ast/ignore"]
