[package]
name = "scc-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript-compiler-api = { workspace = true, features = ["walkdir"] }

log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse"] }
flexi_logger.workspace = true
vmap.workspace = true
walkdir.workspace = true
file-id.workspace = true
fd-lock.workspace = true
msgbox.workspace = true

[dev-dependencies]
similar-asserts.workspace = true

[lints]
workspace = true
