[package]
name = "redscript-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
derive-where.workspace = true
bitflags.workspace = true
chumsky = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[lints]
workspace = true

[features]
chumsky = ["dep:chumsky"]
walkdir = ["dep:walkdir"]
testing = []
